@@ -122,7 +122,7 @@ int reiserfs_getinfo(cdico *d, char *devname)
     msgprintf(MSG_DEBUG1, "reiserfs_blksize=[%ld]\n", (long)temp16);
     
     // ---- minimum fsarchiver version required to restore
-    dico_add_u64(d, 0, FSYSHEADKEY_MINFSAVERSION, FSA_VERSION_BUILD(0, 5, 9, 0));
+    dico_add_u64(d, 0, FSYSHEADKEY_MINFSAVERSION, FSA_VERSION_BUILD(0, 6, 4, 0));
     
 reiserfs_read_sb_close:
     close(fd);
